--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.6",
     "cors": "^2.8.5",
     "express": "^5.1.0"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
